[package]
name = "dhcp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"
env_logger = "0.10.0"
ipnetwork = "0.20.0"
log = "0.4.19"
pnet = "0.33.0"
rusqlite = "0.29.0"
